применил lombok, перенес реализацию из сервиса в репозитроий, соездинил два метода по проверки строки в один, вынес в енум логику присваивания и оптимизировал методы присваивания статуса, добавил прайват к переменным сканнер и сервис, переработал нейминг методов.